# python-mpv

./: .gitignore  README.md  README.rst  do_release.sh  mpv-test.py  mpv.py  pyproject.toml  setup.py  sub_test.srt
.github/workflows/: tests.yml
tests/: requirements.txt  test_mpv.py
